[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "node-hdbconnect"
version = "0.1.0"
[build-dependencies]
neon-build = "0.2.0"

[dependencies]
hdbconnect = "0.9.1"
lazy_static = "1.2.0"
nanoid = "0.2.0"
neon = "0.2.0"
neon-serde = "0.1.1"
parking_lot = "0.6.4"
serde = "1.0.80"
serde_derive = "1.0.80"

[lib]
crate-type = ["dylib"]
name = "node_hdbconnect"
