[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "node-hdbconnect"
version = "0.1.0"
[build-dependencies]
neon-build = "0.2.0"

[dependencies]
chashmap = "2.2.0"
lazy_static = "1.2.0"
nanoid = "0.2.0"
neon = "0.2.0"
neon-serde = "0.1.1"
parking_lot = "0.6.4"
serde = "1.0.80"
serde_bytes = "0.10.4"
serde_db = "0.5.1"
# serde_db = { path = "../../rust-serde_db" }
serde_derive = "1.0.80"

[dependencies.hdbconnect]
# version = "0.10.0"
# git = "https://github.com/emabee/rust-hdbconnect"
git = "https://github.com/pseitz/rust-hdbconnect"
# path = "../../rust-hdbconnect"

[lib]
crate-type = ["dylib"]
name = "node_hdbconnect"
