[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "node-hdbconnect"
version = "0.1.0"
[build-dependencies]
neon-build = "0.3.1"

[dependencies]
chashmap = "2.2.2"
lazy_static = "1.4.0"
nanoid = "0.2.0"
neon = "0.3.1"
neon-serde = "0.1.1"
parking_lot = "0.9.0"
serde = "1.0.99"
serde_bytes = "0.11.2"
serde_derive = "1.0.99"

[dependencies.hdbconnect]
features = ["tls"]
version = "0.15.4"

[lib]
crate-type = ["dylib"]
name = "node_hdbconnect"

[patch.crates-io.neon-serde]
git = "https://github.com/elwerene/neon-serde"
